--- a/code2code/build.properties
+++ b/code2code/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                lib/freemarker.jar,\
                icons/,\
                lib/velocity-1.6-dep.jar,\
-               lib/groovy-all-1.5.7.jar
+               lib/groovy-all-1.5.7.jar,\
+               OSGI-INF/l10n/bundle.properties
