--- a/code2code.feature/.project
+++ b/code2code.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>code2code.features</name>
+	<name>code2code.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
